--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
             border-radius: 8px;
             display: none;
         }
+
     </style>
 </head>
 <body>
@@ -142,8 +143,12 @@
                 <h3>Animation Controls</h3>
                 <div class="control-group">
                     <label for="timeSlider">Time:</label>
-                    <input type="range" id="timeSlider" min="0" max="100" value="0" disabled />
-                    <span id="timeDisplay">0.00s</span>
+                    <!-- Main timeline -->
+                    <input type="range" id="timeSlider" min="0" max="100" step="0.01" value="0" disabled />
+
+                    <div style="display: flex; justify-content: center; font-size: 12px;">
+                        <span id="timeDisplay">0.00s</span>
+                    </div>
                 </div>
                 <div class="control-group">
                     <button id="playBtn" disabled>Play</button>
@@ -158,24 +163,43 @@
             </div>
 
             <div id="cleanupSection">
-                <h3>Mocap Cleanup</h3>
+                <h3>Selective Bone Control</h3>
                 <div class="control-group">
-                    <label for="smoothingStrength">Smoothing Strength:</label>
-                    <select id="smoothingStrength">
-                        <option value="light">Light (Preserve Detail)</option>
-                        <option value="medium" selected>Medium (Balanced)</option>
-                        <option value="heavy">Heavy (Strong Smoothing)</option>
+                    <label for="smoothBoneSelect">Bone to Smooth:</label>
+                    <select id="smoothBoneSelect">
+                        <option value="">-- Select Bone --</option>
                     </select>
                 </div>
                 <div class="control-group">
-                    <label>
-                        <input type="checkbox" id="handsOnly" checked />
-                        Focus on Hands/Wrists/Fingers Only
-                    </label>
+                    <div style="display: flex; gap: 10px; align-items: center;">
+                        <div>
+                            <label for="startTime" style="font-size: 12px;">Start Time (s):</label>
+                            <input type="number" id="startTime" step="0.1" min="0" value="0" style="width: 70px; padding: 4px; background: #333; border: 1px solid #555; color: #fff; border-radius: 3px;">
+                        </div>
+                        <div>
+                            <label for="endTime" style="font-size: 12px;">End Time (s):</label>
+                            <input type="number" id="endTime" step="0.1" min="0" value="1" style="width: 70px; padding: 4px; background: #333; border: 1px solid #555; color: #fff; border-radius: 3px;">
+                        </div>
+                        <div>
+                            <label for="smoothIntensity" style="font-size: 12px;">Intensity:</label>
+                            <select id="smoothIntensity" style="width: 80px; padding: 4px; background: #333; border: 1px solid #555; color: #fff; border-radius: 3px;">
+                                <option value="light">Light</option>
+                                <option value="medium" selected>Medium</option>
+                                <option value="heavy">Heavy</option>
+                                <option value="lock">Lock</option>
+                            </select>
+                        </div>
+                    </div>
+                    <button id="addSmoothRule" style="margin-top: 5px; padding: 4px 8px; font-size: 12px;">Add Smooth Rule</button>
                 </div>
-                <button id="cleanupBtn" disabled>Clean Up Mocap Animation</button>
-                <button id="makeLoopBtn" disabled>Make Animation Loop</button>
-                <button id="resetOriginalBtn" disabled>Reset to Original</button>
+                <div class="control-group">
+                    <label>Control Rules:</label>
+                    <div id="smoothRulesList" style="background: #444; padding: 5px; border-radius: 3px; min-height: 20px; font-size: 12px;">
+                        <span style="color: #888;">No control rules defined</span>
+                    </div>
+                </div>
+                <button id="setBoneLockBtn" disabled>Set Bone Smooth</button>
+                <button id="exportBtn" disabled>Export Cleaned Animation (FBX)</button>
                 <div id="cleanupStatus" style="margin-top: 10px; font-size: 12px; color: #66ccff;"></div>
             </div>
 
