Changed confusing button text from GLB->FBX to just GLB

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     </div>
                 </div>
                 <button id="setBoneLockBtn" disabled>Set Bone Smooth</button>
-                <button id="exportBtn" disabled>Export Cleaned Animation (GLB→FBX)</button>
+                <button id="exportBtn" disabled>Export Cleaned Animation (GLB)</button>
                 <button id="exportJsonBtn" disabled>Export JSON for AI Training</button>
                 <div id="cleanupStatus" style="margin-top: 10px; font-size: 12px; color: #66ccff;"></div>
             </div>
